fix: remove white bars when pinching out on mobile (#9)
extract a background color for both body and main to use to remove any white bars present on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,12 @@ body > div {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background: var(--main-background-color);
 }
 
 *,
 *::before,
 *::after {
     box-sizing: border-box;
+    --main-background-color: #22211f;
 }
